# rust-office-365-lab

./: .aiignore  Cargo.toml  README.md
src/: main.rs
